added units tests (some need to get fixed....) added dummy to run unit tests without job-server added first HIVE job modified kMeans example to use HIVE input